--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -5,6 +5,7 @@ import "../styles/global.css";
 import type { ImageMetadata } from "astro";
 import FallbackImage from "../assets/blog-placeholder-1.jpg";
 import { SITE_TITLE } from "../consts";
+import { ClientRouter } from "astro:transitions";
 
 interface Props {
     title: string;
@@ -73,4 +74,4 @@ const { title, description, image = FallbackImage } = Astro.props;
 
 <script is:inline src={"/alpine.min.js"} defer></script>
 
-<!-- <ClientRouter /> -->
+<ClientRouter />
