--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,5 +1,4 @@
 ---
-import { ClientRouter } from "astro:transitions";
 import BaseHead from "../components/BaseHead.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 
@@ -19,7 +18,11 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
     <body>
         <nav class="minimal-nav">
             <a href="/"
-                ><h1 transition:name="title" class="!text-2xl">
+                ><h1
+                    transition:name="title"
+                    transition:animate="slide"
+                    class="!text-2xl"
+                >
                     ← Tim Willebrands
                 </h1></a
             >
